--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -120,13 +120,13 @@
       "metadata": {
         "id": "Sv8au_RO6WUs",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "import os, sys, re\n",
         "\n",
-        "media_file_path = \"/content/drive/My Drive/Movies/Movie.mkv\" #@param {type:\"string\"}\n",
+        "media_file_path = \"\" #@param {type:\"string\"}\n",
         "\n",
         "os.environ['inputFile'] = media_file_path\n",
         "\n",
@@ -154,7 +154,7 @@
         "colab": {}
       },
       "source": [
-        "import re\n",
+        "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
         "\n",
@@ -188,11 +188,11 @@
       "metadata": {
         "id": "iFBUeQhn7QTc",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
-        "import re\n",
+        "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
         "start_time = \"00:00:00.000\" #@param {type:\"string\"}\n",
@@ -233,11 +233,11 @@
       "metadata": {
         "id": "nSeO98YQoTJe",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
-        "import re\n",
+        "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
         "output_file_extension = 'm4a' #@param [\"m4a\", \"mp3\", \"opus\", \"flac\", \"wav\"]\n",
@@ -272,11 +272,11 @@
       "metadata": {
         "id": "nd2LvSRZCxRe",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
-        "import re\n",
+        "import os, sys, re\n",
         "\n",
         "video_file_path = '' #@param {type:\"string\"}\n",
         "resolution = '1080p' #@param [\"1080p\", \"720p\", \"480p\", \"360p\", \"240p\"]\n",
