--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -264,7 +264,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Re-encode a Video to a Different Resoltuion"
+        "###» Re-encode a Video to a Different Resolution"
       ]
     },
     {
