--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -176,6 +176,44 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "colab_type": "text",
+        "id": "he_Pa76FP-Aa"
+      },
+      "source": [
+        "###» Convert *.mp4* ➔ *.mkv* (Lossless)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xXrTX2bMQGNr",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['outputFile'] = filename_raw\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict experimental \"$outputPath\"\"$outputFile\".mkv"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FpJXJiRl6-gK",
         "colab_type": "text"
       },
