--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -112,7 +112,9 @@
         "colab_type": "text"
       },
       "source": [
-        "> *You can ignore the \"At least one output file must be specified\" error after running this.*\n"
+        "![](https://i.imgur.com/B9H0hhh.png)\n",
+        "* *You can ignore this error at the end of the metadata*\n",
+        "\n"
       ]
     },
     {
@@ -142,7 +144,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Convert *.mkv* ➔ *.mp4* (Lossless)"
+        "###» Convert *.mkv* ➔ *.mp4* *(Lossless)*"
       ]
     },
     {
@@ -180,7 +182,7 @@
         "id": "he_Pa76FP-Aa"
       },
       "source": [
-        "###» Convert *.mp4* ➔ *.mkv* (Lossless)"
+        "###» Convert *.mp4* ➔ *.mkv* *(Lossless)*"
       ]
     },
     {
@@ -218,7 +220,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Trim Video File (Lossless)"
+        "###» Trim Video File *(Lossless)*"
       ]
     },
     {
@@ -263,7 +265,7 @@
         "id": "2f-THZmDoOaY"
       },
       "source": [
-        "###» Extract Audio from Video File (Lossless)"
+        "###» Extract Audio from Video File *(Lossless)*"
       ]
     },
     {
