--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -112,9 +112,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![](https://i.imgur.com/B9H0hhh.png)\n",
-        "* *You can ignore this error at the end of the metadata*\n",
-        "\n"
+        "> *You can ignore the \"At least one output file must be specified\" error after running this.*\n"
       ]
     },
     {
@@ -144,7 +142,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Convert *.mkv* ➔ *.mp4* *(Lossless)*"
+        "###» Convert *.mkv* ➔ *.mp4* (Lossless)"
       ]
     },
     {
@@ -178,49 +176,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "he_Pa76FP-Aa"
-      },
-      "source": [
-        "###» Convert *.mp4* ➔ *.mkv* *(Lossless)*"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xXrTX2bMQGNr",
-        "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
-      },
-      "source": [
-        "import os, sys, re\n",
-        "\n",
-        "video_file_path = \"\" #@param {type:\"string\"}\n",
-        "\n",
-        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
-        "output_file_path_raw = output_file_path.group(0)\n",
-        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
-        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
-        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
-        "\n",
-        "os.environ['inputFile'] = video_file_path\n",
-        "os.environ['outputFile'] = filename_raw\n",
-        "os.environ['outputPath'] = output_file_path_raw\n",
-        "\n",
-        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict experimental \"$outputPath\"\"$outputFile\".mkv"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "FpJXJiRl6-gK",
         "colab_type": "text"
       },
       "source": [
-        "###» Trim Video File *(Lossless)*"
+        "###» Trim Video File (Lossless)"
       ]
     },
     {
@@ -265,7 +225,7 @@
         "id": "2f-THZmDoOaY"
       },
       "source": [
-        "###» Extract Audio from Video File *(Lossless)*"
+        "###» Extract Audio from Video File (Lossless)"
       ]
     },
     {
