--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -8,12 +8,16 @@
       "collapsed_sections": [
         "EFOqhHG6hOVH",
         "CUq1_Dnegrs1",
-        "KgNPvGccgwd8",
         "RDHuIkoi6l9a",
         "NQ0TxfKeghR8",
+        "NObEcBWAJoaz",
         "FpJXJiRl6-gK",
+        "SNDGdMRn3PA-",
         "2f-THZmDoOaY",
-        "MSUasbRUDP3B"
+        "MSUasbRUDP3B",
+        "8qgQqQyD3kvv",
+        "GahMjYf8miNs",
+        "7-3O4en4C4IL"
       ],
       "toc_visible": true,
       "include_colab_link": true
@@ -92,7 +96,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **3.** Run FFmpeg Scripts *(Convert, Edit, Trim + more)*"
+        "# **3.** Run FFmpeg Scripts (*Convert, Edit, Trim + more*)"
       ]
     },
     {
@@ -102,17 +106,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Display Media File Codecs + Metadata"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X4yIG_nqYAoH",
-        "colab_type": "text"
-      },
-      "source": [
-        "> *You can ignore the \"At least one output file must be specified\" error after running this.*\n"
+        "###» Display Media File Metadata"
       ]
     },
     {
@@ -138,11 +132,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "X4yIG_nqYAoH",
+        "colab_type": "text"
+      },
+      "source": [
+        "> *You can ignore the* \"`At least one output file must be specified`\" *error after running this.*\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NQ0TxfKeghR8",
         "colab_type": "text"
       },
       "source": [
-        "###» Convert *.mkv* ➔ *.mp4* (Lossless)"
+        "###» Convert *Video File* ➔ *.mp4* (*Lossless*)"
       ]
     },
     {
@@ -163,12 +169,60 @@
         "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
         "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
         "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
         "\n",
         "os.environ['inputFile'] = video_file_path\n",
-        "os.environ['outputFile'] = filename_raw\n",
         "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['startTime'] = start_time\n",
+        "os.environ['endTime'] = end_time\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
         "\n",
-        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict experimental \"$outputPath\"\"$outputFile\".mp4"
+        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mp4"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "NObEcBWAJoaz"
+      },
+      "source": [
+        "###» Convert *Video File* ➔ *.mkv* (*Lossless*)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "form",
+        "id": "zsx4JFLRJoa0",
+        "colab": {}
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['startTime'] = start_time\n",
+        "os.environ['endTime'] = end_time\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
+        "\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mkv"
       ],
       "execution_count": 0,
       "outputs": []
@@ -180,7 +234,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Trim Video File (Lossless)"
+        "###» Trim Video File (*Lossless*)"
       ]
     },
     {
@@ -222,10 +276,80 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
+        "id": "SNDGdMRn3PA-"
+      },
+      "source": [
+        "###» Crop Video"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "form",
+        "id": "CEHi5EMm9lXG",
+        "colab": {}
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "out_width = \"1920\" #@param {type:\"string\"}\n",
+        "out_height = \"804\" #@param {type:\"string\"}\n",
+        "starting_position_x = \"0\" #@param {type:\"string\"}\n",
+        "starting_position_y = \"138\" #@param {type:\"string\"}\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['outWidth'] = out_width\n",
+        "os.environ['outHeight'] = out_height\n",
+        "os.environ['positionX'] = starting_position_x\n",
+        "os.environ['positionY'] = starting_position_y\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
+        "\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" -filter:v \"crop=$outWidth:$outHeight:$positionX:$positionY\" \"$outputPath\"/\"$fileName\"-CROP.\"$fileExtension\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KFcIThDuBii_",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Crop Variables Explanation:\n",
+        "\n",
+        "* `out_width` = The width of your cropped video file.\n",
+        "* `out_height` = The height of your cropped video file.\n",
+        "* `starting_position_x` & `starting_position_y` = These values define the x & y coordinates of the top left corner of your original video to start cropping from.\n",
+        "\n",
+        "###### *Example: For cropping the black bars from a video that looked like* [this](https://yuju.pw/y/312r.png):\n",
+        "* *For your starting coordinates* (`x` , `y`) *you would use* (`0` , `138`).\n",
+        "* *For* `out_width` *you would use* `1920`. *And for* `out_height` *you would use `804`.*\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
         "id": "2f-THZmDoOaY"
       },
       "source": [
-        "###» Extract Audio from Video File (Lossless)"
+        "###» Extract Audio from Video File (*Lossless*)"
       ]
     },
     {
@@ -279,7 +403,7 @@
         "import os, sys, re\n",
         "\n",
         "video_file_path = '' #@param {type:\"string\"}\n",
-        "resolution = '1080p' #@param [\"1080p\", \"720p\", \"480p\", \"360p\", \"240p\"]\n",
+        "resolution = '1080p' #@param [\"2160p\", \"1440p\", \"1080p\", \"720p\", \"480p\", \"360p\", \"240p\"]\n",
         "file_type = 'mp4' #@param [\"mkv\", \"mp4\"]\n",
         "\n",
         "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
@@ -296,6 +420,161 @@
         "os.environ['resolutionHeight'] = resolution_raw.group(0)\n",
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -vf \"scale=-1:\"$resolutionHeight\"\" -c:a copy -strict experimental \"$outputPath\"/\"$fileName\"-\"$resolutionHeight\"p.\"$fileType\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "8qgQqQyD3kvv"
+      },
+      "source": [
+        "###» Extract Individual Frames from Video (*Lossless*)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "form",
+        "id": "ee5omyu53kv0",
+        "colab": {}
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "start_time = \"00:00:00.000\" #@param {type:\"string\"}\n",
+        "end_time = \"00:01:00.000\" #@param {type:\"string\"}\n",
+        "frame_rate = \"23.976\" #@param {type:\"string\"}\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['startTime'] = start_time\n",
+        "os.environ['endTime'] = end_time\n",
+        "os.environ['frameRate'] = frame_rate\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
+        "\n",
+        "!mkdir \"$outputPath\"/\"Extracted Frames\"\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" -ss \"$startTime\" -to \"$endTime\" -r \"$frameRate\"/1 \"$outputPath\"/\"Extracted Frames\"/frame%04d.png"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Fj7AI-wW9KKU",
+        "colab_type": "text"
+      },
+      "source": [
+        "##### This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
+        "* [*Example*](https://yuju.pw/y/36pP.png) *of output folder*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "GahMjYf8miNs"
+      },
+      "source": [
+        "###» Generate Thumbnails - Preview from Video (3x2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "form",
+        "id": "J2u-Rha8miNy",
+        "colab": {}
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "output_file_type = 'png' #@param [\"png\", \"jpg\"]\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['outputExtension'] = output_file_type\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
+        "\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" -vframes 1 -q:v 0 -vf \"select=not(mod(n\\,200)),scale=-1:480,tile=3x2\" -an \"$outputPath\"/\"$fileName\"_thumbnails.\"$outputExtension\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NqB2mnt78bxA",
+        "colab_type": "text"
+      },
+      "source": [
+        "##### This will create a 3x2 layout in the same directory as your video file.\n",
+        "* [*Example*](https://yuju.pw/y/39i2.png) *of output image*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7-3O4en4C4IL",
+        "colab_type": "text"
+      },
+      "source": [
+        "###» Convert Audio Filetype (*mp3, m4a, ogg, flac, etc.*)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aURlOf9BC1P3",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "audio_file_path = \"\" #@param {type:\"string\"}\n",
+        "output_file_type = \"mp3\" #@param [\"mp3\", \"ogg\", \"m4a\", \"opus\", \"flac\", \"alac\", \"wav\"]\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", audio_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", audio_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = audio_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['fileExtension'] = output_file_type\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" \"$outputPath\"/\"$fileName\"converted.\"$fileExtension\""
       ],
       "execution_count": 0,
       "outputs": []
