--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -54,10 +54,34 @@
       "metadata": {
         "id": "hFeE-qPuhTiK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
-        "!apt install ffmpeg"
+        "#@title <font size=\"5\">← ឵឵<i>Upgrade FFmpeg to v4.2.2</font> { vertical-output: true }\n",
+        "from IPython.display import clear_output\n",
+        "import os, urllib.request\n",
+        "HOME = os.path.expanduser(\"~\")\n",
+        "pathDoneCMD = f'{HOME}/doneCMD.sh'\n",
+        "if not os.path.exists(f\"{HOME}/.ipython/ttmg.py\"):\n",
+        "    hCode = \"https://raw.githubusercontent.com/biplobsd/\" \\\n",
+        "                \"Google-Colab-CloudTorrent/master/res/ttmg.py\"\n",
+        "    urllib.request.urlretrieve(hCode, f\"{HOME}/.ipython/ttmg.py\")\n",
+        "\n",
+        "from ttmg import (\n",
+        "    loadingAn,\n",
+        "    textAn,\n",
+        ")\n",
+        "\n",
+        "loadingAn(name=\"lds\")\n",
+        "textAn(\"Installing Dependencies...\", ty='twg')\n",
+        "os.system('pip install git+git://github.com/AWConant/jikanpy.git')\n",
+        "os.system('add-apt-repository -y ppa:jonathonf/ffmpeg-4')\n",
+        "os.system('apt-get update')\n",
+        "os.system('apt install mediainfo')\n",
+        "os.system('apt-get install ffmpeg')\n",
+        "clear_output()\n",
+        "print('Installation finished."
       ],
       "execution_count": 0,
       "outputs": []
@@ -106,7 +130,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Display Media File Metadata"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Display Media File Metadata"
       ]
     },
     {
@@ -148,7 +172,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Convert *Video File* ➔ *.mp4* (*Lossless*)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert *Video File* ➔ *.mp4* (*Lossless*)"
       ]
     },
     {
@@ -191,7 +215,7 @@
         "id": "NObEcBWAJoaz"
       },
       "source": [
-        "###» Convert *Video File* ➔ *.mkv* (*Lossless*)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert *Video File* ➔ *.mkv* (*Lossless*)"
       ]
     },
     {
@@ -234,7 +258,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Trim Video File (*Lossless*)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Trim Video File (*Lossless*)"
       ]
     },
     {
@@ -279,7 +303,28 @@
         "id": "SNDGdMRn3PA-"
       },
       "source": [
-        "###» Crop Video"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Crop Video"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KFcIThDuBii_",
+        "colab_type": "text"
+      },
+      "source": [
+        "<h3> Crop Variables Explanation:\n",
+        "\n",
+        "* `out_width` = The width of your cropped video file.\n",
+        "* `out_height` = The height of your cropped video file.\n",
+        "* `starting_position_x` & `starting_position_y` = These values define the x & y coordinates of the top left corner of your original video to start cropping from.\n",
+        "\n",
+        "###### *Example: For cropping the black bars from a video that looked like* [this](https://yuju.pw/y/312r.png):\n",
+        "* *For your starting coordinates* (`x` , `y`) *you would use* (`0` , `138`).\n",
+        "* *For* `out_width` *you would use* `1920`. *And for* `out_height` *you would use `804`.*\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -324,32 +369,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KFcIThDuBii_",
-        "colab_type": "text"
-      },
-      "source": [
-        "#### Crop Variables Explanation:\n",
-        "\n",
-        "* `out_width` = The width of your cropped video file.\n",
-        "* `out_height` = The height of your cropped video file.\n",
-        "* `starting_position_x` & `starting_position_y` = These values define the x & y coordinates of the top left corner of your original video to start cropping from.\n",
-        "\n",
-        "###### *Example: For cropping the black bars from a video that looked like* [this](https://yuju.pw/y/312r.png):\n",
-        "* *For your starting coordinates* (`x` , `y`) *you would use* (`0` , `138`).\n",
-        "* *For* `out_width` *you would use* `1920`. *And for* `out_height` *you would use `804`.*\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "colab_type": "text",
         "id": "2f-THZmDoOaY"
       },
       "source": [
-        "###» Extract Audio from Video File (*Lossless*)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Extract Audio from Video File (*Lossless*)"
       ]
     },
     {
@@ -388,7 +412,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Re-encode a Video to a Different Resolution"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Re-encode a Video to a Different Resolution"
       ]
     },
     {
@@ -428,21 +452,23 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "8qgQqQyD3kvv"
+        "id": "9UagRtLPyKoQ"
       },
       "source": [
-        "###» Extract Individual Frames from Video (*Lossless*)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Extract Individual Frames from Video"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "cellView": "form",
-        "id": "ee5omyu53kv0",
+        "cellView": "both",
+        "id": "jTnByMhAyKoF",
         "colab": {}
       },
       "source": [
+        "#@markdown This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
+        "* [*Example*](https://yuju.pw/y/36pP.png) *of output folder*\n",
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
@@ -475,12 +501,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Fj7AI-wW9KKU",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "p0WoiCi4yKn-"
       },
       "source": [
-        "##### This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
-        "* [*Example*](https://yuju.pw/y/36pP.png) *of output folder*"
+        "##### "
       ]
     },
     {
@@ -490,7 +515,7 @@
         "id": "GahMjYf8miNs"
       },
       "source": [
-        "###» Generate Thumbnails - Preview from Video (3x2)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Generate Thumbnails - Preview from Video (3x2)"
       ]
     },
     {
@@ -502,6 +527,7 @@
         "colab": {}
       },
       "source": [
+        "#@markdown Example of output image: https://yuju.pw/y/39i2.png <br>\n",
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
@@ -521,21 +547,10 @@
         "os.environ['fileName'] = filename_raw\n",
         "os.environ['fileExtension'] = file_extension_raw\n",
         "\n",
-        "!ffmpeg -hide_banner -i \"$inputFile\" -vframes 1 -q:v 0 -vf \"select=not(mod(n\\,200)),scale=-1:480,tile=3x2\" -an \"$outputPath\"/\"$fileName\"_thumbnails.\"$outputExtension\""
+        "!ffmpeg -hide_banner -i \"$inputFile\" -vframes 1 -q:v 2 -vf \"select=not(mod(n\\,200)),scale=-1:480,tile=3x2\" -an \"$outputPath\"/\"$fileName\"_thumbnails.\"$outputExtension\""
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NqB2mnt78bxA",
-        "colab_type": "text"
-      },
-      "source": [
-        "##### This will create a 3x2 layout in the same directory as your video file.\n",
-        "* [*Example*](https://yuju.pw/y/39i2.png) *of output image*"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -544,7 +559,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###» Convert Audio Filetype (*mp3, m4a, ogg, flac, etc.*)"
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert Audio Filetype (*mp3, m4a, ogg, flac, etc.*)"
       ]
     },
     {
@@ -552,8 +567,8 @@
       "metadata": {
         "id": "aURlOf9BC1P3",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "import os, sys, re\n",
@@ -575,6 +590,159 @@
         "os.environ['fileName'] = filename_raw\n",
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" \"$outputPath\"/\"$fileName\"converted.\"$fileExtension\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "VRk2Ye1exWVA"
+      },
+      "source": [
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Extract + Upload Frames from Video</font>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "form",
+        "id": "BIGsgarfxWVI",
+        "colab": {}
+      },
+      "source": [
+        "import os, re, time, pathlib\n",
+        "import urllib.request\n",
+        "from IPython.display import clear_output\n",
+        "\n",
+        "Auto_UP_Gdrive = False  \n",
+        "AUTO_MOVE_PATH = \"/content\" \n",
+        "HOME = os.path.expanduser(\"~\")\n",
+        "pathDoneCMD = f'{HOME}/doneCMD.sh'\n",
+        "\n",
+        "if not os.path.exists(f\"{HOME}/.ipython/ttmg.py\"):\n",
+        "    hCode = \"https://raw.githubusercontent.com/biplobsd/\" \\\n",
+        "                \"Google-Colab-CloudTorrent/master/res/ttmg.py\"\n",
+        "    urllib.request.urlretrieve(hCode, f\"{HOME}/.ipython/ttmg.py\")\n",
+        "\n",
+        "from ttmg import (\n",
+        "    runSh,\n",
+        "    findProcess,\n",
+        "    loadingAn,\n",
+        "    updateCheck,\n",
+        "    ngrok\n",
+        ")\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
+        "\n",
+        "!mkdir -p \"/content/frames\"\n",
+        "\n",
+        "for i in range(10):\n",
+        "    clear_output()\n",
+        "    loadingAn()\n",
+        "    print(\"Uploading Frames...\")\n",
+        "\n",
+        "%cd \"/content/frames\"\n",
+        "!ffmpeg -hide_banner -ss 00:56.0 -i \"$inputFile\" -vframes 1 -q:v 1 -y \"/content/frames/frame1.png\"\n",
+        "!curl --silent -F \"reqtype=fileupload\" -F \"fileToUpload=@frame1.png\" https://catbox.moe/user/api.php -o frame1.txt\n",
+        "f1 = open('frame1.txt', 'r')\n",
+        "%cd \"/content\"\n",
+        "file_content1 = f1.read()\n",
+        "\n",
+        "%cd \"/content/frames\"\n",
+        "!ffmpeg -hide_banner -ss 02:20.0 -i \"$inputFile\" -vframes 1 -q:v 1 -y \"/content/frames/frame2.png\"\n",
+        "!curl --silent -F \"reqtype=fileupload\" -F \"fileToUpload=@frame2.png\" https://catbox.moe/user/api.php -o frame2.txt\n",
+        "%cd \"/content/frames\"\n",
+        "f2 = open('frame2.txt', 'r')\n",
+        "%cd \"/content\"\n",
+        "file_content2 = f2.read()\n",
+        "\n",
+        "clear_output()\n",
+        "print (\"Screenshot URLs:\")\n",
+        "print (\"1. \" + file_content1)\n",
+        "print (\"2. \" + file_content2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tozwpAhhnm69",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">MediaInfo</font>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NTULRguzu0b0",
+        "colab_type": "code",
+        "cellView": "form",
+        "colab": {}
+      },
+      "source": [
+        "path = \"\" #@param {type:\"string\"}\n",
+        "save_txt = False #@param {type:\"boolean\"}\n",
+        "import os, uuid, re, IPython\n",
+        "import ipywidgets as widgets\n",
+        "import time\n",
+        "\n",
+        "from glob import glob\n",
+        "from IPython.display import HTML, clear_output\n",
+        "from google.colab import output, drive\n",
+        "\n",
+        "def mediainfo():\n",
+        "  display(HTML(\"<br>\"))\n",
+        "#   print(path.split(\"/\")[::-1][0])\n",
+        "  display(HTML(\"<br>\"))\n",
+        "#   media = !mediainfo \"$path\"\n",
+        "#   media = \"\\n\".join(media).replace(os.path.dirname(path)+\"/\", \"\")\n",
+        "  get_ipython().system_raw(\"\"\"mediainfo --LogFile=\"/root/.nfo\" \"$path\" \"\"\")\n",
+        "  with open('/root/.nfo', 'r') as file:\n",
+        "    media = file.read()\n",
+        "    media = media.replace(os.path.dirname(path)+\"/\", \"\")\n",
+        "  print(media)\n",
+        "  get_ipython().system_raw(\"rm -f '/root/.nfo'\")\n",
+        "  \n",
+        "  if save_txt:\n",
+        "    txt = path.rpartition('.')[0] + \".txt\"\n",
+        "    if os.path.exists(txt):\n",
+        "      get_ipython().system_raw(\"rm -f '$txt'\")\n",
+        "    !curl -s https://pastebin.com/raw/TApKLQfM -o \"$txt\"\n",
+        "    with open(txt, 'a+') as file:\n",
+        "      file.write(\"\\n\\n\")\n",
+        "      file.write(media)\n",
+        "\n",
+        "while not os.path.exists(\"/content/drive\"):\n",
+        "  try:\n",
+        "    drive.mount(\"/content/drive\")\n",
+        "    clear_output(wait=True)\n",
+        "  except:\n",
+        "    clear_output()\n",
+        "    \n",
+        "if not os.path.exists(\"/usr/bin/mediainfo\"):\n",
+        "  get_ipython().system_raw(\"apt-get install mediainfo\")\n",
+        "  \n",
+        "mediainfo()"
       ],
       "execution_count": 0,
       "outputs": []
