--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -54,8 +54,8 @@
       "metadata": {
         "id": "hFeE-qPuhTiK",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title <font size=\"5\">← ឵឵<i>Upgrade FFmpeg to v4.2.2</font> { vertical-output: true }\n",
@@ -462,7 +462,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "id": "jTnByMhAyKoF",
         "colab": {}
       },
@@ -497,16 +497,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "p0WoiCi4yKn-"
-      },
-      "source": [
-        "##### "
-      ]
     },
     {
       "cell_type": "markdown",
