--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -64,8 +64,7 @@
         "HOME = os.path.expanduser(\"~\")\n",
         "pathDoneCMD = f'{HOME}/doneCMD.sh'\n",
         "if not os.path.exists(f\"{HOME}/.ipython/ttmg.py\"):\n",
-        "    hCode = \"https://raw.githubusercontent.com/biplobsd/\" \\\n",
-        "                \"Google-Colab-CloudTorrent/master/res/ttmg.py\"\n",
+        "    hCode = \"https://raw.githubusercontent.com/yunooooo/gcct/master/res/ttmg.py\"\n",
         "    urllib.request.urlretrieve(hCode, f\"{HOME}/.ipython/ttmg.py\")\n",
         "\n",
         "from ttmg import (\n",
@@ -81,7 +80,7 @@
         "os.system('apt install mediainfo')\n",
         "os.system('apt-get install ffmpeg')\n",
         "clear_output()\n",
-        "print('Installation finished.')"
+        "print('Installation finished."
       ],
       "execution_count": 0,
       "outputs": []
