--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -80,7 +80,7 @@
         "os.system('apt install mediainfo')\n",
         "os.system('apt-get install ffmpeg')\n",
         "clear_output()\n",
-        "print('Installation finished."
+        "print('Installation finished.')"
       ],
       "execution_count": 0,
       "outputs": []
