--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -8,6 +8,7 @@
       "collapsed_sections": [
         "EFOqhHG6hOVH",
         "CUq1_Dnegrs1",
+        "KgNPvGccgwd8",
         "RDHuIkoi6l9a",
         "NQ0TxfKeghR8",
         "NObEcBWAJoaz",
@@ -15,9 +16,11 @@
         "SNDGdMRn3PA-",
         "2f-THZmDoOaY",
         "MSUasbRUDP3B",
-        "8qgQqQyD3kvv",
+        "9UagRtLPyKoQ",
         "GahMjYf8miNs",
-        "7-3O4en4C4IL"
+        "7-3O4en4C4IL",
+        "VRk2Ye1exWVA",
+        "tozwpAhhnm69"
       ],
       "toc_visible": true,
       "include_colab_link": true
@@ -42,8 +45,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EFOqhHG6hOVH",
-        "colab_type": "text"
+        "id": "EFOqhHG6hOVH"
       },
       "source": [
         "# **1.** Install FFmpeg"
@@ -53,9 +55,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "hFeE-qPuhTiK",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "#@title <font size=\"5\">← ឵឵<i>Upgrade FFmpeg to v4.2.2</font> { vertical-output: true }\n",
@@ -82,14 +82,13 @@
         "clear_output()\n",
         "print('Installation finished.')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CUq1_Dnegrs1",
-        "colab_type": "text"
+        "id": "CUq1_Dnegrs1"
       },
       "source": [
         "# **2.** Mount Google Drive \n",
@@ -101,22 +100,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ojI73noUg1If",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ojI73noUg1If"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KgNPvGccgwd8",
-        "colab_type": "text"
+        "id": "KgNPvGccgwd8"
       },
       "source": [
         "# **3.** Run FFmpeg Scripts (*Convert, Edit, Trim + more*)"
@@ -125,8 +121,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RDHuIkoi6l9a",
-        "colab_type": "text"
+        "id": "RDHuIkoi6l9a"
       },
       "source": [
         "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Display Media File Metadata"
@@ -136,9 +131,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sv8au_RO6WUs",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -149,14 +142,13 @@
         "\n",
         "!ffmpeg -i \"$inputFile\" -hide_banner"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "X4yIG_nqYAoH",
-        "colab_type": "text"
+        "id": "X4yIG_nqYAoH"
       },
       "source": [
         "> *You can ignore the* \"`At least one output file must be specified`\" *error after running this.*\n",
@@ -167,8 +159,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NQ0TxfKeghR8",
-        "colab_type": "text"
+        "id": "NQ0TxfKeghR8"
       },
       "source": [
         "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert *Video File* ➔ *.mp4* (*Lossless*)"
@@ -178,9 +169,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ls4O5VLwief-",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -204,13 +193,12 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mp4"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "NObEcBWAJoaz"
       },
       "source": [
@@ -220,10 +208,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "cellView": "form",
-        "id": "zsx4JFLRJoa0",
-        "colab": {}
+        "id": "zsx4JFLRJoa0"
       },
       "source": [
         "import os, sys, re\n",
@@ -247,14 +233,55 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mkv"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FpJXJiRl6-gK",
-        "colab_type": "text"
+        "id": "DnrhKfW53wRb"
+      },
+      "source": [
+        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Merge *Video File* + *Subs File* ➔ *.mkv* (*Lossless*)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "b1MjbVYZ3wRb"
+      },
+      "source": [
+        "import os, sys, re\n",
+        "\n",
+        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "subs_file_path = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", video_file_path)\n",
+        "filename = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "filename_raw = re.sub(\".{4}$\", \"\", filename)\n",
+        "file_extension = re.search(\".{3}$\", filename)\n",
+        "file_extension_raw = file_extension.group(0)\n",
+        "\n",
+        "os.environ['inputFile'] = video_file_path\n",
+        "os.environ['inputSubsFile'] = subs_file_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['startTime'] = start_time\n",
+        "os.environ['endTime'] = end_time\n",
+        "os.environ['fileName'] = filename_raw\n",
+        "os.environ['fileExtension'] = file_extension_raw\n",
+        "\n",
+        "!ffmpeg -hide_banner -i \"$inputFile\" -i \"$inputSubsFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mkv"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FpJXJiRl6-gK"
       },
       "source": [
         "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Trim Video File (*Lossless*)"
@@ -264,9 +291,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iFBUeQhn7QTc",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -292,13 +317,12 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -ss \"$startTime\" -to \"$endTime\" -c copy \"$outputPath\"/\"$fileName\"-TRIM.\"$fileExtension\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "SNDGdMRn3PA-"
       },
       "source": [
@@ -308,8 +332,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KFcIThDuBii_",
-        "colab_type": "text"
+        "id": "KFcIThDuBii_"
       },
       "source": [
         "<h3> Crop Variables Explanation:\n",
@@ -329,10 +352,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "cellView": "form",
-        "id": "CEHi5EMm9lXG",
-        "colab": {}
+        "id": "CEHi5EMm9lXG"
       },
       "source": [
         "import os, sys, re\n",
@@ -362,13 +383,12 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -filter:v \"crop=$outWidth:$outHeight:$positionX:$positionY\" \"$outputPath\"/\"$fileName\"-CROP.\"$fileExtension\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "2f-THZmDoOaY"
       },
       "source": [
@@ -379,9 +399,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "nSeO98YQoTJe",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -401,14 +419,13 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -vn -c:a copy \"$outputPath\"/\"$fileName\"-audio.\"$fileType\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MSUasbRUDP3B",
-        "colab_type": "text"
+        "id": "MSUasbRUDP3B"
       },
       "source": [
         "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Re-encode a Video to a Different Resolution"
@@ -418,9 +435,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "nd2LvSRZCxRe",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -444,13 +459,12 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -vf \"scale=-1:\"$resolutionHeight\"\" -c:a copy -strict experimental \"$outputPath\"/\"$fileName\"-\"$resolutionHeight\"p.\"$fileType\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "9UagRtLPyKoQ"
       },
       "source": [
@@ -460,10 +474,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "cellView": "form",
-        "id": "jTnByMhAyKoF",
-        "colab": {}
+        "id": "jTnByMhAyKoF"
       },
       "source": [
         "#@markdown This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
@@ -494,13 +506,12 @@
         "!mkdir \"$outputPath\"/\"Extracted Frames\"\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -ss \"$startTime\" -to \"$endTime\" -r \"$frameRate\"/1 \"$outputPath\"/\"Extracted Frames\"/frame%04d.png"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "GahMjYf8miNs"
       },
       "source": [
@@ -510,10 +521,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "cellView": "form",
-        "id": "J2u-Rha8miNy",
-        "colab": {}
+        "id": "J2u-Rha8miNy"
       },
       "source": [
         "#@markdown Example of output image: https://yuju.pw/y/39i2.png <br>\n",
@@ -538,14 +547,13 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" -vframes 1 -q:v 2 -vf \"select=not(mod(n\\,200)),scale=-1:480,tile=3x2\" -an \"$outputPath\"/\"$fileName\"_thumbnails.\"$outputExtension\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7-3O4en4C4IL",
-        "colab_type": "text"
+        "id": "7-3O4en4C4IL"
       },
       "source": [
         "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert Audio Filetype (*mp3, m4a, ogg, flac, etc.*)"
@@ -555,9 +563,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "aURlOf9BC1P3",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -580,13 +586,12 @@
         "\n",
         "!ffmpeg -hide_banner -i \"$inputFile\" \"$outputPath\"/\"$fileName\"converted.\"$fileExtension\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "VRk2Ye1exWVA"
       },
       "source": [
@@ -596,10 +601,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "cellView": "form",
-        "id": "BIGsgarfxWVI",
-        "colab": {}
+        "id": "BIGsgarfxWVI"
       },
       "source": [
         "import os, re, time, pathlib\n",
@@ -666,14 +669,13 @@
         "print (\"1. \" + file_content1)\n",
         "print (\"2. \" + file_content2)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tozwpAhhnm69",
-        "colab_type": "text"
+        "id": "tozwpAhhnm69"
       },
       "source": [
         "\n",
@@ -684,9 +686,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "NTULRguzu0b0",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "path = \"\" #@param {type:\"string\"}\n",
@@ -733,7 +733,7 @@
         "  \n",
         "mediainfo()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
